--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>KT_GIUA_KI</title>
 </head>
 
@@ -11,7 +11,7 @@
     <div class="container__top">
         <div class="flex-top">
             <h1 class="margin-bottom">Cao Đẳng Kinh Tế Đối Ngoại</h1>
-            <img src="/IMAGE/sv_logo_dashboard.png" alt="" />
+            <img src="IMAGE/sv_logo_dashboard.png" alt="" />
         </div>
         <p class="text-p">
             Trường Cao đẳng Kinh tế Đối ngoại là một trung tâm đào tạo nguồn nhân lực từ bậc cao đẳng trở xuống.
@@ -25,7 +25,7 @@
         <section>
             <article>
                 <p class="text-muted">
-                    <img src="/IMAGE/logo-cofer.jpg" alt="logo-cofer" />
+                    <img src="IMAGE/logo-cofer.jpg" alt="logo-cofer" />
                 </p>
                 <h3>"College Of Foreign Economic Relation"</h3>
                 <p class="text-p">
@@ -41,7 +41,7 @@
             </article>
             <aside>
                 <div class="border-bottom margin-bottom padding-bottom">
-                    <img src="/IMAGE/xnk.jpg" alt="" />
+                    <img src="IMAGE/xnk.jpg" alt="" />
 
                     <div>
                         <h4>Kinh doanh Xuất Nhập Khẩu</h4>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="border-bottom margin-bottom padding-bottom">
-                    <img src="/IMAGE/tmdt.jpg" alt="" />
+                    <img src="IMAGE/tmdt.jpg" alt="" />
                     <div>
                         <h4>Kinh doanh Thương mại điện tử</h4>
                         <p class="text-p">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="border-bottom margin-bottom padding-bottom">
-                    <img src="/IMAGE/qtks.jpg" alt="" />
+                    <img src="IMAGE/qtks.jpg" alt="" />
                     <div>
                         <h4>Quản trị khách sạn</h4>
                         <p class="text-p">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="/IMAGE/tatm.jpg" alt="" />
+                    <img src="IMAGE/tatm.jpg" alt="" />
                     <div>
                         <h4>Tiếng Anh thương mại</h4>
                         <p class="text-p">
